--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,18 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  overflow-x: hidden;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+hr {
+  margin: 1rem 0;
 }
-
-* {
-  box-sizing: border-box;
+@layer components {
+  .btn-link {
+    @apply flex flex-row px-4 py-2 text-gray-600  hover:bg-gray-100 rounded-r-full transition-all w-11/12;
+  }
+  .btn-link span {
+    @apply ml-2 text-gray-600;
+  }
 }
